<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    tools:context=".PostJournalActivity">

    <ImageView
        android:id="@+id/post_imageView"
        android:layout_width="399dp"
        android:layout_height="254dp"
        android:src="@drawable/image_three"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.012" />

    <TextView
        android:id="@+id/post_username_textview"
        android:layout_width="121dp"
        android:layout_height="27dp"
        android:text="Gina"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.113"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postCameraButton"
        app:layout_constraintVertical_bias="0.023" />

    <TextView
        android:id="@+id/post_date_texview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Today"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.091"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_username_textview"
        app:layout_constraintVertical_bias="0.023" />

    <ImageView
        android:id="@+id/postCameraButton"
        android:layout_width="94dp"
        android:layout_height="62dp"
        app:layout_constraintBottom_toBottomOf="@+id/post_imageView"
        app:layout_constraintEnd_toEndOf="@+id/post_imageView"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="@+id/post_imageView"
        app:layout_constraintTop_toTopOf="@+id/post_imageView"
        app:layout_constraintVertical_bias="0.479"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <EditText
        android:id="@+id/post_title_et"
        android:layout_width="393dp"
        android:layout_height="39dp"
        android:ems="10"
        android:hint="@string/post_title_hint"
        android:inputType="textPersonName"
        android:background="@drawable/input_outline"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_imageView"
        app:layout_constraintVertical_bias="0.035" />

    <EditText
        android:id="@+id/post_description_et"
        android:layout_width="391dp"
        android:layout_height="58dp"
        android:background="@drawable/input_outline"
        android:ems="10"
        android:hint="@string/thoughts"
        android:inputType="textMultiLine"
        android:padding="15dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="19dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_title_et"
        app:layout_constraintVertical_bias="0.057" />

    <ProgressBar
        android:id="@+id/post_progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_description_et"
        app:layout_constraintVertical_bias="0.127" />

    <Button
        android:id="@+id/post_save_journal_button"
        android:layout_width="378dp"
        android:layout_height="45dp"
        android:background="@android:color/transparent"
        android:text="@string/save_button"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_progressBar"
        app:layout_constraintVertical_bias="0.960" />
</androidx.constraintlayout.widget.ConstraintLayout>